# vb-autonomy-hacks

./: Documentation.md  README.md  ec2.sh  pyproject.toml
IoT-Core-GreenGrass/: drone-planning.py
bedrock/Image-Language-Model/: nova-lite-v1:0.py  readme.md
bedrock/LLM/: nova.py
bedrock/vlm/: remove-bg.py  vlm.py
data/: threats.csv
detector/audio_synth/audio_event/: config.py  dataset.py  metrics.py  postprocess.py  test_event_detector.py  train_event_detector.py  utils_audio.py
detector/audio_synth/audio_event/models/: crnn.py
detector/image_classifier/: config.py  eval.py  eval_three_class_dataset.py  finetune_generated_images.py  infer_tiles.py  train.py  vis.py
detector/image_classifier/datasets/: pickle_dataset.py
detector/image_classifier/models/: classifier.py
detector/image_classifier/utils/: common.py  metrics.py
detector/thermal_classifier/: thermal_classifier.py
generator/audio_generator/: generate_audio_dataset.py
generator/image_generator/: generate_incident.py  generate_thermal_image.py  query_satellite_map.py  split_statellite_map.py
sageMaker/: vision.py
src/: main.py
