[project]
name = "vb-autonomy-hacks"
version = "0.1.0"
description = ""
authors = [
    {name = "Ishaan Sen",email = "ishaan.sen100@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "osmnx (>=2.0.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
